--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,22 @@ code {
     monospace;
 }
 
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 40px;
+  height: 40px;
+  background-image: url("assets/images/icon-slider.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: #10d5c2;
+  border-radius: 50%;
+  box-shadow: 0px 10px 20px 5px rgba(16, 213, 194, 0.4);
+}
+
+input[type=range]:hover::-webkit-slider-thumb {
+  background-color: #1ae3d0;
+}
+
+input[type=range]:active::-webkit-slider-thumb {
+  background-color: #0e9a8d;
+}
