--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,7 @@ input[type=range]::-webkit-slider-thumb {
   box-shadow: 0px 10px 20px 5px rgba(16, 213, 194, 0.4);
 }
 
+
 input[type=range]:hover::-webkit-slider-thumb {
   background-color: #1ae3d0;
 }
@@ -35,3 +36,25 @@ input[type=range]:hover::-webkit-slider-thumb {
 input[type=range]:active::-webkit-slider-thumb {
   background-color: #0e9a8d;
 }
+
+input[type=range]::-moz-range-thumb {
+  appearance: none;
+  width: 40px;
+  height: 40px;
+  background-image: url("assets/images/icon-slider.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: #10d5c2;
+  border-radius: 50%;
+  box-shadow: 0px 10px 20px 5px rgba(16, 213, 194, 0.4);
+}
+
+
+input[type=range]:hover::-moz-range-thumb {
+  background-color: #1ae3d0;
+}
+
+input[type=range]:active::-moz-range-thumb {
+  background-color: #0e9a8d;
+}
+
