--- a/src/index.css
+++ b/src/index.css
@@ -4,19 +4,21 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
-input[type=range]::-webkit-slider-thumb {
+/* Select Range Chrome */
+
+input[type="range"]::-webkit-slider-thumb {
   -webkit-appearance: none;
   width: 40px;
   height: 40px;
@@ -28,17 +30,25 @@ input[type=range]::-webkit-slider-thumb {
   box-shadow: 0px 10px 20px 5px rgba(16, 213, 194, 0.4);
 }
 
-
-input[type=range]:hover::-webkit-slider-thumb {
+input[type="range"]:hover::-webkit-slider-thumb {
   background-color: #1ae3d0;
 }
 
-input[type=range]:active::-webkit-slider-thumb {
+input[type="range"]:active::-webkit-slider-thumb {
   background-color: #0e9a8d;
 }
 
-input[type=range]::-moz-range-thumb {
+input[type="range"]:focus::-webkit-slider-thumb {
+  background-color: #0e9a8d;
+  outline: 4px solid #fafbff;
+}
+
+/* Select Range Firefox */
+
+input[type="range"]::-moz-range-thumb {
   appearance: none;
+  outline: none;
+  border: none;
   width: 40px;
   height: 40px;
   background-image: url("assets/images/icon-slider.svg");
@@ -49,12 +59,94 @@ input[type=range]::-moz-range-thumb {
   box-shadow: 0px 10px 20px 5px rgba(16, 213, 194, 0.4);
 }
 
-
-input[type=range]:hover::-moz-range-thumb {
+input[type="range"]:hover::-moz-range-thumb {
   background-color: #1ae3d0;
 }
 
-input[type=range]:active::-moz-range-thumb {
+input[type="range"]:active::-moz-range-thumb {
   background-color: #0e9a8d;
 }
 
+input[type="range"]:focus::-moz-range-thumb {
+  background-color: #0e9a8d;
+  outline: 4px solid #fafbff;
+}
+
+/* Toggle Style */
+#toggle:checked ~ label span.toggle-circle {
+  @apply translate-x-5;
+}
+#toggle:checked ~ label span.toggle-bg {
+  @apply bg-strong-cyan;
+}
+/* #toggle:hover ~ label span.toggle-bg {
+  @apply bg-strong-cyan;
+} */
+#toggle:focus ~ label span.toggle-bg {
+  @apply outline;
+  @apply outline-2;
+  @apply outline-offset-2;
+  @apply outline-slate-300;
+}
+
+/* Button Animate */
+
+.spinner {
+  font-size: 0;
+  position: relative;
+}
+
+.spinner::after {
+  position: absolute;
+  content: "";
+  width: 25px;
+  height: 25px;
+  border: 4px solid #fff;
+  border-radius: 50%;
+  border-left-color: transparent;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: spin ease-in 2.5s forwards;
+  animation-name: spin;
+  transition-timing-function: ease-in-out;
+  animation-duration: 3s;
+  animation-fill-mode: forwards;
+}
+
+.spinner::before {
+  position: absolute;
+  content: "";
+  width: 30px;
+  height: 13px;
+  border: 6px solid #fff;
+  border-radius: 10%;
+  border-right: 0;
+  border-top: 0;
+  left: 50%;
+  top: 45%;
+  transform: rotate(0deg) scale(0);
+  animation: success ease-in 0.15s forwards;
+  animation-delay: 3s;
+}
+
+@keyframes spin {
+  0% {
+    transform: trnaslate(-50%, -50%) rotate(0deg) scale(1);
+  }
+  90% {
+    transform: translate(-50%, -50%) rotate(1080deg) scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+
+@keyframes success {
+  from {
+    transform: translate(-150%, -50%) rotate(0deg) scale(0);
+  }
+  to {
+    transform: translate(-50%, -50%) rotate(-45deg) scale(1);
+  }
+}
